Adding total hours logged

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,9 @@
     <h1>Hue Energy Usage</h1>
     <a href="https://github.com/Connor-Knabe/hue-energy-usage">https://github.com/Connor-Knabe/hue-energy-usage</a>
 
+    <h3>Total Hours Logged:
+        <%= totalUsage.totalHours %>
+    </h3>
     <h3>Total Hours On:
         <%= totalUsage.hoursOn %>
     </h3>
