Changing total hours logged to days logged and adding a note about total hours on includes all lights

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,10 +30,10 @@
     <h1>Hue Energy Usage</h1>
     <a href="https://github.com/Connor-Knabe/hue-energy-usage">https://github.com/Connor-Knabe/hue-energy-usage</a>
 
-    <h3>Total Hours Logged:
-        <%= totalUsage.totalHours %>
+    <h3>Days since log file started:
+        <%= totalUsage.totalDays %>
     </h3>
-    <h3>Total Hours On:
+    <h3>Total Hours On (includes all lights):
         <%= totalUsage.hoursOn %>
     </h3>
     <h3>Total Cost: $
